lineNumberCommands:Changing it to display a textbox next to line number
Don't hide the textbox anymore

--- a/ILEditor/Classes/AvalonEdit.LineNumberCommandMargin/LineNumberDisplay.xaml
+++ b/ILEditor/Classes/AvalonEdit.LineNumberCommandMargin/LineNumberDisplay.xaml
@@ -8,31 +8,17 @@
              x:Name="lineNumberDisplayCtl"
              d:DesignHeight="300" d:DesignWidth="300">
     <DockPanel>
-        <TextBlock Text="{Binding Path=Model.LineNumber, ElementName=lineNumberDisplayCtl}" 
-                   Name="lineNumberTextBlock" 
-                   MouseEnter="lineNumberTextBlock_MouseEnter">
-            <TextBlock.Style>
-                <Style TargetType="TextBlock">
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding Path=Model.IsCommandMode, ElementName=lineNumberDisplayCtl}" Value="true">
-                            <Setter Property="Visibility" Value="Collapsed"/>
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </TextBlock.Style>
-        </TextBlock>
-        <TextBox Text="{Binding Path=Model.CommandText, ElementName=lineNumberDisplayCtl}"
+        <TextBox DockPanel.Dock="Left"
+                 MinWidth="25"
+                Text="{Binding Path=Model.CommandText, ElementName=lineNumberDisplayCtl}"
                  Name="lineNumberTextBox"
-                 MouseLeave="lineNumberTextBox_MouseLeave">
-            <TextBox.Style>
-                <Style TargetType="TextBox">
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding Path=Model.IsCommandMode, ElementName=lineNumberDisplayCtl}" Value="false">
-                            <Setter Property="Visibility" Value="Collapsed"/>
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </TextBox.Style>
+                 >
         </TextBox>
+        <TextBlock  DockPanel.Dock="Left"
+                    Text="{Binding Path=Model.LineNumber, ElementName=lineNumberDisplayCtl}" 
+                   Name="lineNumberTextBlock" 
+                   >
+        </TextBlock>
+
     </DockPanel>
 </UserControl>
