--- a/ILEditor/Classes/AvalonEdit.LineNumberCommandMargin/LineNumberDisplay.xaml
+++ b/ILEditor/Classes/AvalonEdit.LineNumberCommandMargin/LineNumberDisplay.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              x:Name="lineNumberDisplayCtl"
              d:DesignHeight="300" d:DesignWidth="300">
-    <DockPanel>
+    <DockPanel Height="{Binding Path=Model.ControlHeight, Mode=TwoWay, ElementName=lineNumberDisplayCtl}">
         <TextBox DockPanel.Dock="Left"
                  MinWidth="25"
                 Text="{Binding Path=Model.CommandText, ElementName=lineNumberDisplayCtl}"
