lineNumberCommands:Need update source trigger so you can type d and then hit enter
Without that you'd have to type the command, loose focus, enter focus, then hit enter.

d was being entered, then enter, but the command processing saw it as a blank command because the update source trigger was default of loose focus instead of propertychanged

--- a/ILEditor/Classes/AvalonEdit.LineNumberCommandMargin/LineNumberDisplay.xaml
+++ b/ILEditor/Classes/AvalonEdit.LineNumberCommandMargin/LineNumberDisplay.xaml
@@ -20,7 +20,7 @@
     <DockPanel Height="{Binding Path=Model.ControlHeight, Mode=TwoWay, ElementName=lineNumberDisplayCtl}">
         <TextBox DockPanel.Dock="Left"
                  MinWidth="25"
-                Text="{Binding Path=Model.CommandText, ElementName=lineNumberDisplayCtl}"
+                Text="{Binding Path=Model.CommandText, ElementName=lineNumberDisplayCtl, UpdateSourceTrigger=PropertyChanged}"
                  Name="lineNumberCommandTextBox"
                  LostFocus="lineNumberCommandTextBox_LostFocus"
                  KeyDown="lineNumberCommandTextBox_KeyDown"
