--- a/ILEditor/Classes/AvalonEdit.LineNumberCommandMargin/LineNumberDisplay.xaml
+++ b/ILEditor/Classes/AvalonEdit.LineNumberCommandMargin/LineNumberDisplay.xaml
@@ -24,6 +24,7 @@
                  Name="lineNumberCommandTextBox"
                  LostFocus="lineNumberCommandTextBox_LostFocus"
                  KeyDown="lineNumberCommandTextBox_KeyDown"
+                 PreviewKeyDown="lineNumberCommandTextBox_PreviewKeyDown"
                  >
             <TextBox.Style>
                 <Style TargetType="TextBox">
